--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
-<head></head>
-<body><h1>Hello world</h1></body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dbf - Vercel app</title>
+</head>
+<body>
+    <header>
+        <h1>Vercel App</h1>
+    </header>
+    <hr>
+    <main>
+        <h2>Lorem ipsum</h2>
+        <p>Dolor sit amet, consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
+    </main>
+    <hr>
+    <footer>
+        <p>by <a href="https://dibesfer.github.io">dibesfer</a></p>
+    </footer>
+
+</body>
 </html>
