--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dbf - Vercel app</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Vercel App</h1>
+        <h1><a href="index.html">dibesfer Vercel App</a></h1>
     </header>
     <hr>
     <main>
-        <h2>Lorem ipsum</h2>
+        <h2>1. Lorem ipsum</h2>
+        <p>Dolor sit amet, consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
+
+        <h2>2. Lorem ipsum</h2>
+        <p>Dolor sit amet, consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
+
+        <h2>3. Lorem ipsum</h2>
         <p>Dolor sit amet, consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
     </main>
     <hr>
