--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dbf - Vercel app</title>
+    <title>dbf - ▲ Vercel app</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1><a href="index.html">dibesfer Vercel App</a></h1>
+        <h1><a href="index.html">dibesfer ▲ Vercel App</a></h1>
     </header>
     <hr>
     <main>
