--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <hr>
     <main>
         <h2>1. Lorem ipsum</h2>
-        <p>Dolor sit amet, consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
+        <p>olikuem sarudit ipasokki irii aloureadotta</p>
 
         <h2>2. Lorem ipsum</h2>
         <p>Dolor sit amet, consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
