--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>olikuem sarudit ipasokki irii aloureadotta</p>
 
         <h2>2. Lorem ipsum</h2>
-        <p>Dolor sit amet, consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
+        <p>Sa rin do rant euco sine pi te li da rei. consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
 
         <h2>3. Lorem ipsum</h2>
         <p>Dolor sit amet, consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
