--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1><a href="index.html">dibesfer ▲ Vercel App</a></h1>
+        <h1><a href="index.html">▲</a></h1>
+        <p>dibesfer's Vercel App</p>
     </header>
     <hr>
     <main>
