--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="index.html">▲</a></h1>
+        <h1 style="font-size: 60px;"><a href="index.html">▲</a></h1>
         <p>dibesfer's Vercel App</p>
     </header>
     <hr>
