--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dbf - ▲ Vercel app</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://dibesfer.github.io/ferstyle.css">
 </head>
 <body>
     <header>
-        <h1 style="font-size: 60px;"><a href="index.html">▲</a></h1>
+        <h1 style="font-size: 70px;line-height: 0.5;text-shadow: 2px 2px gray;"><a href="index.html">▲</a></h1>
         <p>dibesfer's Vercel App</p>
     </header>
     <hr>
     <main>
-        <h2>1. Lorem ipsum</h2>
+        
+        <h2>1. Square ■</h2>
         <p>olikuem sarudit ipasokki irii aloureadotta</p>
-
-        <h2>2. Lorem ipsum</h2>
+        
+        <h2>2. Triangle ▲</h2>
         <p>Sa rin do rant euco sine pi te li da rei. consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
 
-        <h2>3. Lorem ipsum</h2>
+        <h2>3. Circle ●
+        </h2>
         <p>Dolor sit amet, consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
     </main>
     <hr>
