--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
         <p>olikuem sarudit ipasokki irii aloureadotta</p>
         
         <h2>2. Triangle ▲</h2>
-        <p>Sa rin do rant euco sine pi te li da rei. consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
-
+        <p>Sa rin do rant euco sine pi te li da rei. consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?
         <h2>3. Circle ●
         </h2>
         <p>Dolor sit amet, consectetur adipisicing elit. Hic officia architecto adipisci repellat odio alias praesentium veniam enim id quibusdam quasi sequi, voluptates iste magni nulla iure incidunt blanditiis mollitia?</p>
-    </main>
+     </main>
     <hr>
     <footer>
         <p>by <a href="https://dibesfer.github.io">dibesfer</a></p>
