--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <main>
 
         <h2>1. Square ■</h2>
-        <p>Olikuem sarudit ipasokki irii aloureadotta</p>
+        <p>Olikuem sarudit ipasokki irii aloureadotta. Eri das ufote fag zo cesines, esav, asep ecil ibuze i pag og af.</p>
 
         <h2>2. Triangle ▲</h2>
-        <p>Sa rin do rant euco sine pi te li da rei. consectetur adipisicing elit.
-        
+        <p>Sa rin do rant euco sine pi te li da rei. consectetur adipisicing elit. Ol dudo nefefo u enap olo, vasopa a aviraz dut uz bib cobib elecim.
+            
         <h2>3. Circle ●</h2>
-        <p>Dolor sit amet, consectetur adipisicing elit. Yelli dera ororamai e ti lundere eret.fer</p>
+        <p>Dolor sit amet, consectetur adipisicing elit. Yelli dera ororamai e ti lundere eret. Fer a un ecugape durar u, ivar iv ug cozog bacoge i voru ivisave divup.</p>
     </main>
     <hr>
     <footer>
